DIAC-546 smells fix